--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2024"
 bit-set = "0.8.0"
 googletest = "0.14.0"
 itertools = "0.14.0"
+lazy_static = "1.5.0"
 rand = "0.9.0"
+termion = "4.0.4"
