--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ bit-set = "0.8.0"
 googletest = "0.14.0"
 itertools = "0.14.0"
 lazy_static = "1.5.0"
+ndarray = "0.12.1"
 num = "0.4.3"
 rand = "0.9.0"
+strum = "0.27"
+strum_macros = "0.27"
 termion = "4.0.4"
