--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,13 @@ edition = "2024"
 
 [dependencies]
 bit-set = "0.8.0"
+burn = "0.16.1"
 googletest = "0.14.0"
 itertools = "0.14.0"
 lazy_static = "1.5.0"
 ndarray = "0.12.1"
 num = "0.4.3"
+num-traits = "0.2.19"
 rand = "0.9.0"
 strum = "0.27"
 strum_macros = "0.27"
