--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 bit-set = "0.8.0"
-burn = "0.16.1"
+criterion = "0.5.1"
 googletest = "0.14.0"
 itertools = "0.14.0"
 lazy_static = "1.5.0"
@@ -16,3 +16,8 @@ rand = "0.9.0"
 strum = "0.27"
 strum_macros = "0.27"
 termion = "4.0.4"
+
+[[bench]]
+name = "vectorization-bench"
+path = "benches/vectorization_bench.rs"
+harness = false
