--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 bit-set = "0.8.0"
 burn = "0.16.1"
+burn-ndarray = "0.16.1"
 criterion = "0.5.1"
 googletest = "0.14.0"
 itertools = "0.14.0"
